[package]
name = "td4-gui"
version = "0.1.0"
authors = ["katakanan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#td4-emu = {path = "../td4-emu"}
td4-emu = {git = "https://github.com/katakanan/td4-emu"}

iced ={version= "0.3.0", features = ["smol"]}